<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_margin="32dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/starWarsImage"
            android:layout_width="384dp"
            android:layout_height="216dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/starWarsImage"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/name"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:id="@+id/linear">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/affiliations"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/affiliations"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/species"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/species"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>
            </LinearLayout>
            <android.support.design.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:id="@+id/button"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.card.MaterialCardView>
